# postui

./: Cargo.toml  README.md  TODOS.md  config.json  test.bf
src/: app.rs  config.json  foldertree.rs  lib.rs  main.rs
src/components/: command_bar.rs  folder_popup.rs  list_component.rs  main_pane.rs  mod.rs
src/tabs/: debugtab.rs  historytab.rs  maintab.rs  mod.rs
