[package]
name = "postui"
version = "0.1.0"
authors = ["ejaszczuk <emj1054@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
tui = "0.14"
failure = "0.1.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
