[package]
name = "postui"
version = "0.1.0"
authors = ["ejaszczuk <emj1054@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = { version = "0.23" }
tui = { version = "0.18" }
tui-textarea = { version = "0.1.5", features = ["crossterm"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tui-logger = "0.8.0"
log = "0.4.17"
